# workflow-orchestrator

./: .env.example  .envrc  .gitignore  .orchestrator.yaml  .secrets.enc  .sops.yaml  .workflow_approvals.db  .workflow_log.jsonl  .workflow_state.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTAINMENT_PROPOSAL.md  EXTERNAL_REVIEWS.md  IMPLEMENTATION_PROMPT.md  ISSUE_non_blocking_recommendations.md  LEARNINGS.md  PRD_v2.2_ENHANCEMENTS.md  PR_REVIEW.md  PR_REVIEW_BUDGET.md  PR_REVIEW_CLI_FIXES.md  PR_REVIEW_V2.md  PR_REVIEW_V4.md  PR_REVIEW_V4_PHASE2.md  PR_REVIEW_V4_PHASE4.md  README.md  REVIEW_CLI_FIXES.md  REVIEW_CORE_026.md  REVIEW_HEALING_PHASE0.md  REVIEW_HEALING_PHASE1.md  REVIEW_PACKAGE.md  REVIEW_V4_PHASE3.md  ROADMAP.md  ROLLBACK.md  START_NEW_SESSION.md  V3_IMPLEMENTATION_LOG.md  V3_PRE_IMPLEMENTATION_CHECKLIST.md  agent_workflow.yaml  ai-tool.yaml  ai-tools.json  (+22 more)
.claude/: healing_cache.sqlite  prd_state.json  prompt_core-024-session-logging.md  prompt_prd-007-kickoff.md  review-config.yaml  review_context_phase2.md  settings.json  squad_sessions.json
.gemini/: styleguide.md
.manus/: README.md  decrypt-secrets.sh  secrets.enc.yaml
.orchestrator/: audit.jsonl  external_reviews.json  review_claude_opus.md  review_claude_opus_native.md  review_deepseek.md  review_gemini.md  review_gpt4.md  review_gpt_4o.md  review_gpt_5_2.md  state.json
.review_history/: review_20260108_142306.json  review_20260108_142435.json  review_20260108_162640.json  review_20260108_183115.json  review_20260108_183842.json
.workflow_checkpoints/: cp_20260106_053301_bddea0.json  (+1 more)
(+746 files in other folders)
